Fix credits positioning, text overlapping

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -40,23 +40,23 @@ body {
       }
     }
 
-    p {
-      display: none;
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      font-family: "Abraham TRIAL";
-      font-weight: normal;
-      font-size: 12px;
-      letter-spacing: 0.3px;
-      color: #fff;
-      margin: 13px 27px;
-      text-align: left;
+  }
 
-      &.displayed {
-        display: block;
-      }
-  
+  .image-credit {
+    display: none;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    font-family: "Abraham TRIAL";
+    font-weight: normal;
+    font-size: 12px;
+    letter-spacing: 0.3px;
+    color: #fff;
+    margin: 13px 27px;
+    text-align: left;
+
+    &.displayed {
+      display: block;
     }
 
   }
@@ -65,7 +65,7 @@ body {
     position: absolute;
     top: 56px;
     width: 100vw;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     flex-flow: column;
     align-items: center;
@@ -375,10 +375,17 @@ body {
 
     .background-graphic {
       height: 70vh;
+      min-height: 500px;
+
+      .image-credit.displayed {
+        font-size: 10px;
+      }
+  
     }
     .main-text {
 
       height: ~"calc(70vh - 56px)";
+      min-height: 500px;
 
       .search-guide { 
         display: none;
